fix works nav subtitle wrapping text issue

--- a/css/project_style.css
+++ b/css/project_style.css
@@ -457,6 +457,8 @@ iframe {
         height: 100%;
         transition: all .2s ease-in-out;
         z-index: -1;
+        white-space: nowrap;
+        overflow: hidden;
     }
 
     .btn::before {
